# SMARTOPS

./: .env.example  .gitignore  README.md  journal_de_bord.md  manage.py  requirements.txt  smartops_core.dbml
.github/workflows/: django_ci.yml
accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
api/: permissions.py  serializers.py  tests.py  urls.py  views.py
inventory/: forms.py  models.py  populate_data.py  tests.py  tests_populate.py  urls.py  views.py
inventory/migrations/: 0001_initial.py  0002_client_phone_client_vat_number.py  0003_equipmenttype_equipment_custom_fields_and_more.py
licensing/: installer.py  models.py  services.py  urls.py  views.py
licensing/migrations/: 0001_initial.py  0002_plugin_priority_plugin_python_path_alter_plugin_slug.py  0003_remove_plugin_license_key_hash_plugin_license_key.py
maintenance/: admin.py  forms.py  models.py  populate_interventions.py  urls.py  views.py
maintenance/migrations/: 0001_initial.py  0002_alter_maintenanceticket_status.py
plugins_system/: context_processors.py  hookspecs.py  registry.py
smartops_project/: asgi.py  settings.py  urls.py  wsgi.py
system/: admin.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
technician/: apps.py  tests.py  urls.py  views.py
tmp_plugin/smartops-plugin-demo/: pyproject.toml
tmp_plugin/smartops-plugin-demo/smartops_plugin_demo/: hookimpls.py
tmp_plugin/smartops-plugin-demo/smartops_plugin_demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+32 files in other folders)
